draft done except biblio and table vals

--- a/DraftApril2715.tex
+++ b/DraftApril2715.tex
@@ -371,19 +371,20 @@ G(t) = \int_0^t F^h(i)k_i^h(t) + F^l(i)k_i^l(t) di
 
 \paragraph{} Of course, parameter estimation is not without concern in the existing model. I make some crude estimates for the minimum and maximum kilowatt-hours/year per dollar of wind and solar panels, however there may be reasons for which the cost of clean capital becomes cost competitive with gas or coal due to improvements in technology or manufacturing capabilities. Conversely, there may be limitations to how cheap clean capital can become, particularly if such an international treaty were reached and all countries were making this transition, driving the price of solar panels or wind turbines up. 
 
-\paragraph{} However the most important sensitivity of the model is to the speed of clean capital cost reductions. Shown below in figure \ref{fig:costVsFl} are the optimal cost solutions to simulations run with different cost reduction speeds. A higher value on the x-axis means that the speed of transition is faster. Examples of the range of transmission profiles can be found above in figure \ref{fig:FlScaleScenarios}. For slow transitions, the model is extremely sensitive to improvements in cost reductions. As the speed of transition increases, the model becomes less sensitive to improvements, presumably because we reach the minimum cost per kilowatt-hour quickly. 
-
 \begin{figure}[h]
 \includegraphics[width=\textwidth]{cost_as_func_of_Fl_emissions_05.png}
 \caption{Cost vs Fl\label{fig:costVsFl}}
 \end{figure}
 
-\paragraph{} A natural extension to this model would be endogenizing the cost of clean capital using a learning by doing approach. 
-
-
 \paragraph{} Specific peculiarities of the power generation sector are not modeled here. For example, we make no assumptions about the frequency of running a plant that arises from the bid-in nature of marginal cost power generation. The simplifying assumption is that a capacity factor included in the kilowatt-hours/year per dollar of capital addresses this by combining the profile of frequency of generation coupled with the intermittency of renewable technologies. 
 
-\paragraph{} Uncertainty
+
+\paragraph{} However the most important sensitivity of the model is to the speed of clean capital cost reductions. Shown below in figure \ref{fig:costVsFl} are the optimal cost solutions to simulations run with different cost reduction speeds. A higher value on the x-axis means that the speed of transition is faster. Examples of the range of transmission profiles can be found above in figure \ref{fig:FlScaleScenarios}. For slow transitions, the model is extremely sensitive to improvements in cost reductions. As the speed of transition increases, the model becomes less sensitive to improvements, presumably because we reach the minimum cost per kilowatt-hour quickly. A natural extension to this model would be endogenizing the cost of clean capital using a learning by doing approach. Alternatively, future work could include modeling this problem with uncertainty in the future distribution of cost reductions. Currently the model has perfect foresight, which may lead to over-investment in renewable technology early in the simulation as planners know that the cost effectiveness will increase in the future. With uncertainty in the cost of clean capital, we would better reflect the current challenges facing the clean energy transition
+
+
+
+
+
 
 
 
